# Lumi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LUMI_BEACON_SPEC.md  LUMI_FORGE_SPEC.md  LUMI_MIRROR_SPEC.md  LUMI_REBIRTH_SPEC.md  README.md  ROADMAP.md  install.sh  lumi  main.py  main.py.backup  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml
claude-code/: package.json  tsconfig.json
claude-code/.local-agent/: .claude.json  history.jsonl
claude-code/.local-agent/backups/: .claude.json.backup.1775292007661  .claude.json.backup.1775292100677  .claude.json.backup.1775292394681  .claude.json.backup.1775292645418  .claude.json.backup.1775292773607  (+4 more)
claude-code/dev/: cli.ts  preload.ts
claude-code/src/: QueryEngine.ts  main.tsx  projectOnboardingState.ts
configs/: benchmark_gate.json  config.yaml  rebirth_profile.json
data/memory/: .input_history  longterm.json  mood_log.json  theme.json
data/model_catalogs/: airforce.json  gemini.json  groq.json  openrouter.json  pollinations.json  vercel.json
data/personas/: default.json
data/sessions/: session-20260310_053639.json  session-20260310_064006.json  session-20260310_064114.json  session-20260310_064147.json  session-20260310_125241.json  session-20260310_153039.json  session-20260310_153519.json  session-20260310_154117.json  session-20260310_154236.json  session-20260310_155500.json  session-20260310_160542.json  session-20260310_161918.json  session-20260310_162828.json  session-20260310_170247.json  session-20260310_172915.json  session-20260310_185044.json  session-20260310_202859.json  session-20260310_203029.json  session-20260310_203502.json  session-20260310_203800.json  session-20260310_204135.json  session-20260310_210029.json  session-20260310_210158.json  session-20260310_210631.json  session-20260310_211009.json  session-20260310_212106.json  session-20260310_212541.json  session-20260311_055555.json  session-20260311_055602.json  session-20260311_055622.json  session-20260311_055759.json  session-20260311_055858.json  session-20260311_063338.json  session-20260311_063350.json  session-20260311_064055.json  session-20260311_133542.json  session-20260311_133806.json  session-20260311_133847.json  session-20260311_175752.json  session-20260311_185727.json  (+67 more)
data/ui/: little_notes.json
scripts/: benchmark_gate.py  claude_parity_audit.py  rebirth_audit.py
src/: config.py
src/agents/: action_schema.py  agent.py  benchmark.py  benchmark_scenarios.json  council.py  edit_engine.py  task_memory.py  verification.py
src/chat/: claude_compat.py  client_factory.py  cost.py  hf_client.py  inference_controls.py  model_catalogs.py  model_fetchers.py  model_filters.py  model_registry.py  openai_compat.py  optimizer.py  provider_catalogs.py  provider_session.py  providers.py  runtime.py  streaming.py
src/cli/: args.py  commands.py  context.py  render.py
src/lumi_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/memory/: conversation_store.py  longterm.py  short_term.py
src/prompts/: builder.py
src/tools/: agentic_runtime.py  base.py  mcp.py  rag.py  search.py  voice.py
src/tui/: app.py  colors.py  command_groups.py  controller_actions.py  input.py  media.py  mode_registry.py  mode_sessions.py  notes.py  review_cards.py  session.py  state.py  views.py
src/utils/: autoremember.py  claude_parity.py  export.py  filesystem.py  git_tools.py  highlight.py  history.py  hooks.py  ide.py  intelligence.py  live_lookup.py  log.py  markdown.py  notes.py  permissions.py  plugin_runner.py  plugins.py  project_context.py  project_memory.py  rebirth.py  repo_profile.py  runtime_config.py  skills.py  system_reports.py  themes.py  todo.py  tools.py  voice.py  web.py  workbench.py
tests/: test_agent.py  test_agent_benchmark.py  test_agent_integration.py  test_agent_task_memory.py  test_benchmark_gate.py  test_chat_optimizer.py  test_chat_runtime.py  test_claude_compat.py  test_claude_parity.py  test_conversation_store.py  test_council.py  test_export.py  test_filesystem.py  test_git_tools.py  test_highlight.py  test_hooks.py  test_ide.py  test_inference_controls.py  test_install_script.py  test_intelligence.py  test_live_lookup.py  test_log.py  test_longterm_memory.py  test_markdown.py  test_mode_sessions.py  test_model_catalog.py  test_model_filters.py  test_plugins.py  test_prompts_builder.py  test_provider_registry.py  test_rebirth.py  test_render.py  test_runtime_config.py  test_short_term_memory.py  test_skills.py  test_system_reports.py  test_themes.py  test_tui_input.py  test_tui_integration.py  test_tui_media.py  (+2 more)
(+40 files in other folders)
